# MGE

./: CMakeLists.txt  LICENCE.md  README.md  build.sh  declarations.hpp  default.nix  glad.c  main.cpp  main.hpp  pull.sh  push.sh  result  run.sh
assets/models/brain/: brain.mtl
assets/models/candle01/: candle01.mtl
assets/models/eye/: eye.mtl
assets/models/headskin/: headskin.mtl
assets/models/human01/: diffuse.png~  human01.mtl
assets/models/jaw/: jaw.mtl
assets/models/skull/: skull.mtl
assets/models/test/: test.mtl
assets/models/window/: window.mtl
assets/models/woodfloor/: woodfloor.mtl
assets/scenes/: head.xml  human.xml  outdoors.xml  shack.xml  texthudtest.xml
assets/scripts/: test.lua
assets/shaders/: depth.frag  depth.vert  insane.frag  main.frag  main.vert  old.frag  shadowlighting.frag  skybox.frag  skybox.vert
assets/shaders/postprocessing/: blur.frag  edgedetection.frag  edgehdr.frag  hdr.frag  posterize.frag  sharpen.frag
assets/shaders/ssao/: blurssao.frag  ssao.frag
audio/: CMakeLists.txt  audio.cpp  audio.hpp
audiobank/: CMakeLists.txt  audiobank.cpp  audiobank.hpp
font/: CMakeLists.txt  font.cpp  font.hpp
include/glad/: glad.h
input/: CMakeLists.txt  input.cpp  input.hpp
light/: CMakeLists.txt  light.cpp  light.hpp
lualinker/: CMakeLists.txt  lualinker.cpp  lualinker.hpp
mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp
model/: CMakeLists.txt  model.cpp  model.hpp
physics/: CMakeLists.txt  physics.cpp  physics.hpp
render/: CMakeLists.txt  render.cpp  render.hpp
saved/: inputmap.xml
scene/: CMakeLists.txt  scene.cpp  scene.hpp
shaders/: CMakeLists.txt  main.frag  main.vert  shader.cpp  shader.hpp
signalemitter/: CMakeLists.txt  signalemitter.cpp  signalemitter.hpp
systems/: CMakeLists.txt  systems.cpp  systems.hpp
textures/: CMakeLists.txt  textures.cpp  textures.hpp
